fix white space

--- a/elements-challenges/loop3-step9/css/main.scss
+++ b/elements-challenges/loop3-step9/css/main.scss
@@ -35,6 +35,8 @@ body {
     border-radius: 7px;
     box-shadow: 3px 3px 8px rgba(0,0,0,.1);
     position: relative;
+    width: 650px;
+    height: 260px;
 
     .highlights {
         position: absolute;
@@ -46,6 +48,7 @@ body {
         line-height: 1.3rem;
         color: transparent;
         user-select: none;
+        white-space: pre-wrap;
         
         .hashtag {
             background-color: #71B9FF;
@@ -61,12 +64,13 @@ body {
         background: transparent;
         position: relative;
         z-index: 10;
-        width: 650px;
-        height: 260px;
+        width: 100%;
+        height: 100%;
         line-height: 1.3rem;
 
         @include mobile {
-            height: 210px;
+            min-height: 210px;
+            height: 100%;
         }
     }
 }
